tests/invalid_typecheck/test_tc_array_index_bool.aphi
int[3] A;
bool B;

procedure main {
    B = true;
    A[B] = 1;
}
